# chatProject

./: CMakeLists.txt  README.md
databaseFile/: chatDB.sql
include/: MSGenum.hpp  jsonMsgFormat.hpp  namespace.hpp
include/DAO/: friendModel.hpp  oneChatModel.hpp  user.hpp  userModel.hpp
include/DB/: jdbc.hpp
include/server/: chatServer.hpp  chatService.hpp
others/: draft.txt  message.thrift  sql.sql
others/nginx-1.25.4/objs/: Makefile  autoconf.err  ngx_auto_config.h  ngx_modules.c
others/thrift-0.15.0/: Makefile  Makefile.in  config.h  config.status  configure  libtool
others/thrift-0.15.0/compiler/cpp/: Makefile  Makefile.in
others/thrift-0.15.0/lib/: Makefile  Makefile.in
others/thrift-0.15.0/lib/c_glib/: Makefile  Makefile.in  thrift_c_glib.pc
others/thrift-0.15.0/lib/cl/: Makefile  Makefile.in
others/thrift-0.15.0/lib/cpp/: Makefile  Makefile.in  thrift-nb.pc  thrift-qt5.pc  thrift-z.pc  thrift.pc
others/thrift-0.15.0/lib/d/: Makefile  Makefile.in
others/thrift-0.15.0/lib/dart/: Makefile  Makefile.in
others/thrift-0.15.0/lib/erl/: Makefile  Makefile.in
others/thrift-0.15.0/lib/go/: Makefile  Makefile.in
others/thrift-0.15.0/lib/java/: Makefile  Makefile.in
others/thrift-0.15.0/lib/js/: Makefile  Makefile.in
others/thrift-0.15.0/lib/json/: Makefile  Makefile.in
others/thrift-0.15.0/test/: Makefile  Makefile.in
others/thrift-0.15.0/tutorial/: Makefile  Makefile.in
src/DAO/: friendModel.cpp  oneChatModel.cpp  user.cpp  userModel.cpp
src/DB/: jdbc.cpp
src/server/: chatServer.cpp  chatService.cpp  main.cpp
(+136 files in other folders)
